deploy/k8s/inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: micromart
  labels:
    app: inventory-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9092"
    spec:
      containers:
        - name: inventory-service
          image: ghcr.io/ahargunyllib/micromart/inventory:latest
          ports:
            - containerPort: 50052
              name: grpc
            - containerPort: 9092
              name: metrics
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          livenessProbe:
            grpc:
              port: 50052
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            grpc:
              port: 50052
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: micromart
spec:
  selector:
    app: inventory-service
  ports:
    - port: 50052
      targetPort: grpc
      name: grpc
    - port: 9092
      targetPort: metrics
      name: metrics
