deploy/k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: micromart
  labels:
    app: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9091"
    spec:
      containers:
        - name: order-service
          image: ghcr.io/ahargunyllib/micromart/order:latest
          ports:
            - containerPort: 50051
              name: grpc
            - containerPort: 9091
              name: metrics
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          livenessProbe:
            grpc:
              port: 50051
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            grpc:
              port: 50051
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: micromart
spec:
  selector:
    app: order-service
  ports:
    - port: 50051
      targetPort: grpc
      name: grpc
    - port: 9091
      targetPort: metrics
      name: metrics
